Finished ManageRolesController For Admin,Without Create Permissions

--- a/TedLearn/TedLearnPresentation/Areas/UserPanel/Views/Shared/_Header.cshtml
+++ b/TedLearn/TedLearnPresentation/Areas/UserPanel/Views/Shared/_Header.cshtml
@@ -4,7 +4,7 @@
 @inject IUserServices _userService
 @{
     int userId = User.Identity.GetUserId<int>();
-    var userAvatar = await _userService.GetUserAvatar(userId);
+    var userAvatar = await _userService.GetUserAvatarAsync(userId);
 }
 <header>
     <!-- NavBar -->
