--- a/TedLearn/TedLearnPresentation/Areas/Admin/Views/ManageUsers/GetUser.cshtml
+++ b/TedLearn/TedLearnPresentation/Areas/Admin/Views/ManageUsers/GetUser.cshtml
@@ -1,7 +1,14 @@
 ﻿@using Core.Convertors
 @model Services.DTOs.AdminPanel.User.GetUsersDto
 
-@if (Model.Users.Any(r => r.IsDelete))
+@if (!Model.Users.Any())
+{
+    <tr>
+        <td class="text-center pt-4 align-middle bg-transparent border-t dark:border-white/40 whitespace-nowrap shadow-transparent" colspan="4">هیچ موردی برای نمایش وجود ندارد.</td>
+    </tr>
+}
+
+else @if (Model.Users.Any(r => r.IsDelete))
 {
     foreach (var item in Model.Users)
     {
@@ -61,7 +68,7 @@
 
 }
 
-else @if (Model.Users.Any(r => !r.IsDelete))
+else
 {
     foreach (var item in Model.Users)
     {
@@ -122,13 +129,6 @@ else @if (Model.Users.Any(r => !r.IsDelete))
             </div>
             @*<span pre-pageId="@(Model.PageCount + 1)" class="w-7 h-7 cursor-pointer flex items-center justify-center rounded-full bg-indigo-700 text-slate-100 text-center"><i class="fi fi-rr-angle-small-right relative top-[2px]"></i></span>*@
         </td>
-    </tr>
-}
-
-else
-{
-    <tr>
-        <td class="text-center pt-4 align-middle bg-transparent border-t dark:border-white/40 whitespace-nowrap shadow-transparent" colspan="4">هیچ موردی برای نمایش وجود ندارد.</td>
     </tr>
 }
 
