Create TransactionDbContextServices And Fixed Update Entities In All Controllers For Updating Some Columns And Not Every Column

--- a/TedLearn/TedLearnPresentation/Areas/Admin/Views/ManageRoles/AddRole.cshtml
+++ b/TedLearn/TedLearnPresentation/Areas/Admin/Views/ManageRoles/AddRole.cshtml
@@ -29,7 +29,9 @@
                                 </div>
                                 <div class="flex items-center mx-2 my-4">
                                     <input asp-for="CanDeleteOrEdit" type="checkbox" class="w-4 h-4 cursor-pointer text-black bg-gray-300 border-none rounded-md focus:ring-transparent">
-                                    <label asp-for="CanDeleteOrEdit" class="text-sm mx-2"></label>
+                                    <label class="text-sm mx-2">
+                                        آیا این نقش قابلیت حذف شدن را داشته باشد؟
+                                    </label>
                                 </div>
                                 <div class="mx-2 mt-8">
                                     <label class="cursor-text block">
