Create Dynamic Navbar For CourseGroup And Create 6 Of The Latest Courses With ViewComponents And Create Filter Course Page

--- a/TedLearn/TedLearnPresentation/Views/Error/Error404.cshtml
+++ b/TedLearn/TedLearnPresentation/Views/Error/Error404.cshtml
@@ -29,7 +29,7 @@
         </section>
         <!-- End Rout -->
         <!-- Navbar Course -->
-        @*@await Component.InvokeAsync("CourseGroupComponent")*@
+        @await Component.InvokeAsync("CourseGroup" , "navbar")
         <!-- End Navbar Course -->
     </header>
 }
