--- a/TedLearn/TedLearnPresentation/Views/Shared/_Footer.cshtml
+++ b/TedLearn/TedLearnPresentation/Views/Shared/_Footer.cshtml
@@ -2,30 +2,37 @@
     <!-- Link Contact -->
     <div class="flex items-center w-full h-full justify-around">
         <!-- Whatsapp Link -->
-        <a href="https://wa.me/+989032594838" class="relative top-1 text-center">
+        <a href="https://wa.me/+989107643996" target="_blank" class="relative top-1 text-center">
             <span class="text-2xl text-green-700 bg-slate-50 px-2 rounded-full">
                 <i class="fab fa-whatsapp" aria-hidden="true"></i>
             </span>
         </a>
         <!-- End Whatsapp Link -->
         <!-- Instagram Link -->
-        <a href="https://www.instagram.com/m._.tadayon._.m/" class="relative top-1 text-center">
+        <a href="https://www.instagram.com/m._.tadayon._.m/" target="_blank" class="relative top-1 text-center">
             <span class="text-2xl bg-slate-50 px-2 rounded-full">
                 <i class="fab fa-instagram instagram-gradient" aria-hidden="true"></i>
             </span>
         </a>
         <!-- End Instagram Link -->
         <!-- Telegram Link -->
-        <a href="https://telegram.me/MTediM" class="relative top-1 text-center">
+        <a href="https://telegram.me/Mohammadreza_Tadayon_Saadi" target="_blank" class="relative top-1 text-center">
             <span class="text-2xl text-blue-600 bg-slate-50 px-2 rounded-full">
                 <i class="relative right-[2px] fas fas fa-paper-plane" aria-hidden="true"></i>
             </span>
         </a>
         <!-- End Telegram Link -->
         <!-- Github Link -->
-        <a href="https://github.com/MTediM" class="relative top-1 text-center">
+        <a href="https://github.com/Mohammadreza-Tadayon-Saadi" target="_blank" class="relative top-1 text-center">
             <span class="text-2xl text-black bg-slate-50 px-2 rounded-full">
                 <i class="fab fa-github" aria-hidden="true"></i>
+            </span>
+        </a>
+        <!-- End Github Link -->
+        <!-- Github Link -->
+        <a href="https://mohammadrezatadayonsaadi.ir" target="_blank" class="relative top-1 text-center">
+            <span class="text-2xl text-sky-400 bg-slate-50 px-2 rounded-full">
+                <i class="fa fa-globe" aria-hidden="true"></i>
             </span>
         </a>
         <!-- End Github Link -->
