--- a/TedLearn/TedLearnPresentation/Views/Shared/_SideBar.cshtml
+++ b/TedLearn/TedLearnPresentation/Views/Shared/_SideBar.cshtml
@@ -1,4 +1,5 @@
-﻿    <!-- Responsive Navbar -->
+﻿@using TedLearnPresentation.ViewComponents.CourseGroupComponents;
+    <!-- Responsive Navbar -->
 <!-- Bg Black -->
 <div id="BgNavBar-Header" class="closeBgNav z-[1002] overflow-hidden md:hidden transition-opacity duration-1000 w-full h-full fixed bg-black opacity-60 top-0 right-0"></div>
 <!-- End Bg Black -->
@@ -38,7 +39,7 @@
         </div>
         <!-- End Header -->
         <!-- Link -->
-        @*@await Component.InvokeAsync("CourseGroupInMobileComponent")*@
+        @await Component.InvokeAsync(typeof(CourseGroupViewComponent) , "navbar-mobile")
         <!-- End Link -->
     </div>
     <!-- End Course Menu -->
@@ -76,5 +77,3 @@
         });
     });
 </script>
-
-
