--- a/TedLearn/TedLearnPresentation/Views/Shared/_Styles.cshtml
+++ b/TedLearn/TedLearnPresentation/Views/Shared/_Styles.cshtml
@@ -1,6 +1,6 @@
 ﻿<link rel="icon" href="/images/logo.png">
-<link rel="stylesheet" href="/css/output.css">
-<link rel="stylesheet" href="/css/style.css">
+<link asp-append-version="true" rel="stylesheet" href="/css/output.css">
+<link asp-append-version="true" rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/icons/fontawesome/css/all.min.css">
 <link rel="stylesheet" href="/js/jquery-ui/jquery-ui.theme.min.css">
 <link rel="stylesheet" href="/js/jquery-ui/jquery-ui.structure.min.css">
