--- a/TedLearn/TedLearnPresentation/wwwroot/css/style.css
+++ b/TedLearn/TedLearnPresentation/wwwroot/css/style.css
@@ -647,6 +647,71 @@ table tbody tr:nth-child(even) {
 /* End Course Page */
 
 /* Course Option */
+.course-category-box li > label::before {
+    width: 18px;
+    height: 18px;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border: 1px solid #d7e1e6;
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 3px;
+    outline: medium none;
+    text-decoration: none;
+}
+
+.course-category-box li > label::after {
+    width: 14px;
+    height: 14px;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    background-color: rgb(67 56 202);
+    content: '';
+    position: absolute;
+    right: 2px;
+    top: 5px;
+    opacity: 0;
+}
+
+.course-category-box li > label:hover::before {
+    border-color: rgb(67 56 202);
+}
+
+.course-category-box li > label:hover::after {
+    opacity: 1;
+}
+
+.course-category-box li > label.active::before {
+    border-color: rgb(67 56 202);
+}
+
+.course-category-box li > label.active::after {
+    opacity: 1;
+}
+
+.course-category-box li > label::after {
+    outline: medium none;
+    text-decoration: none;
+    -webkit-transition: opacity 0.1s linear 0s;
+    -moz-transition: opacity 0.1s linear 0s;
+    -ms-transition: opacity 0.1s linear 0s;
+    -o-transition: opacity 0.1s linear 0s;
+    transition: opacity 0.1s linear 0s;
+}
+
+.course-category-box li > label::before {
+    outline: medium none;
+    text-decoration: none;
+    -webkit-transition: border-color 0.1s linear 0s;
+    -moz-transition: border-color 0.1s linear 0s;
+    -ms-transition: border-color 0.1s linear 0s;
+    -o-transition: border-color 0.1s linear 0s;
+    transition: border-color 0.1s linear 0s;
+}
+
 .text-click {
     display: inline;
     padding-top: 10px;
@@ -1159,4 +1224,8 @@ table tbody tr:nth-child(even) {
     color: rgb(55, 65, 81);
     border-bottom: 1px solid rgb(226,232,240);
     background-color: rgb(248,250,252);
+}
+
+.grid-course > #course {
+    width: auto;
 }
